force-app/main/default/objects/Extra_Booking_Form_Fee_Definition__c/Extra_Booking_Form_Fee_Definition__c.object-meta.xml
<CustomObject>
    <description>A child object of the Booking Form Fee definition to store extras</description>
    <label>Extra Booking Form Fee Definition</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extra Booking Form Fee Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>