force-app/main/default/objects/Extra_Booking_Form_Fee_Definition__c/fields/Booking_Form_Fee_Definition__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_Fee_Definition__c</fullName>
    <label>Booking Form Fee Definition</label>
    <referenceTo>Booking_Form_Fee_Definition__c</referenceTo>
    <relationshipLabel>Extra Booking Form Fee Definitions</relationshipLabel>
    <relationshipName>Extra_Booking_Form_Fee_Definitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>