force-app/main/default/objects/Extra_Booking_Form_Fee_Definition__c/fields/FlowMatchingField__c.field-meta.xml
<CustomField>
    <fullName>FlowMatchingField__c</fullName>
    <description>A Unique text field that helps when matching records in flows</description>
    <label>FlowMatchingField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>